--- a/index.html
+++ b/index.html
@@ -5,10 +5,84 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Bistro Piekarnik</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
 </head>
 <body>
-    
+    <div id="main">
+        <div id="social">
+            <a href ='https://www.facebook.com/bistropiekarnik/'><img src="/img/ico/fbico.png" alt=""></a>
+            <a href ='https://www.instagram.com/bistropiekarnik/'><img src="/img/ico/instaico.png" alt=""></a>
+        </div>
+        <ul>
+            <li>O nas</li>
+            <li>•</li>
+            <li>Menu</li>
+            <li><img src="img/logo-white.png" alt="logo"></li>
+            <li>Galeria</li>
+            <li>•</li>
+            <li>Kontakt</li>
+        </ul>
+        <h1>Świeżo upieczony smak</h1>
+    </div>
+    <div id="about">About
+        <div>O nas
+            <h2>O nas</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus tenetur animi quibusdam, minus ipsa aut accusantium pariatur explicabo facilis neque quasi mollitia, totam atque at! Aut harum mollitia unde reprehenderit.
+            </p>
+            <img src="/img/bistronoc.jpg" alt="">
+            <img src="/img/bistrostare.jpg" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus tenetur animi quibusdam, minus ipsa aut accusantium pariatur explicabo facilis neque quasi mollitia, totam atque at! Aut harum mollitia unde reprehenderit.
+            </p>
+        </div>
+        <div>
+            <h2>Nasze mocne strony</h2>
+            <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi consectetur libero perferendis, natus iste, saepe quam similique eius molestias voluptatum in. Id ut eveniet quidem numquam dignissimos laudantium voluptas non.</div>
+            <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi consectetur libero perferendis, natus iste, saepe quam similique eius molestias voluptatum in. Id ut eveniet quidem numquam dignissimos laudantium voluptas non.</div>
+        </div>    
+    </div>
+    <div id="menu">Menu
+        <h2>Menu</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil maxime fugiat excepturi praesentium est optio veritatis deleniti similique officiis eius unde libero labore corrupti incidunt, a magnam modi rerum in!</p>
+        <div>Button
+            <button class="btn">Dania dłówne</button>
+            <button class="btn">Desery</button>
+            <button class="btn">Napoje</button>
+            <button class="btn">Menu dla dzieci</button>
+        </div>
+        <div>menu</div>
+    </div>
+    <div id="galery">Galeria
+        <h2>Galeria</h2>
+        <div>Slajder
+            <img src="/img/Slajder/slajder (1).jpg" alt="">
+            <img src="/img/Slajder/slajder (2).jpg" alt="">
+            <img src="/img/Slajder/slajder (3).jpg" alt="">
+            <img src="/img/Slajder/slajder (4).jpg" alt="">
+            <img src="/img/Slajder/slajder (5).jpg" alt="">
+        </div>
+    </div>
+    <div id="info">
+        <h2>Kontakt</h2>
+        <div>
+            Bistro Piekarnik
+            ul. Kustronia 90
+            43-316 Bielsko-Biała
+        </div>
+        <div>
+            <div>698 057 836</div>
+            <div>biuro@bistropiekarnik.pl</div>
+        </div>
+        <div>
+            <div>Facebook</div>
+            <div>Insta</div>
+        </div>
+        <div> Godziny otwarcia codziennie 12:00 - 20:00</div>
+        <div> Mapa
+            <img src="/img/mapa.jpg" alt="">
+        </div>
+    </div>
+    <footer>Copyright &#169; Bistro Piekarnik 2020 </footer>
+    <script src='main.js'></script>
 </body>
 </html>
